--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -19,11 +19,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/companyInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/companyInfo">
+                android:layout_toLeftOf="@+id/banner">
 
                 <!-- Company Name -->
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
@@ -34,26 +34,40 @@
                     android:layout_marginTop="14dp"
                     android:textColor="@color/redSquareColor"
                     android:textSize="12sp"
-                    app:josefin_style="italic" />
+                    app:josefin_style="italic"
+                    android:layout_toLeftOf="@+id/likeImage"
+                    android:layout_alignParentLeft="true" />
 
                 <!-- Company Logo -->
                 <ImageView
-                    android:layout_marginTop="14dp"
                     android:id="@+id/match_logo"
                     android:layout_width="78dp"
-                    android:background="@color/black_overlay"
                     android:layout_height="42dp"
-                    android:layout_margin="14dp" />
-            </LinearLayout>
+                    android:layout_below="@id/item_job_company_name"
+                    android:layout_margin="14dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@color/black_overlay" />
 
-            <!-- Like Image -->
+                <!-- Like Image -->
+                <ImageView
+                    android:id="@+id/likeImage"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_like"
+                    android:tint="@color/redSquareColor"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="10dp" />
+
+            </RelativeLayout>
+
             <ImageView
-                android:id="@+id/likeImage"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="14dp"
-                android:src="@drawable/ic_like"
-                android:tint="@color/redSquareColor"
+                android:id="@+id/banner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true" />
 
@@ -61,9 +75,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/companyInfo"
                 android:layout_margin="14dp"
-                android:orientation="vertical"
-                android:layout_below="@id/companyInfo">
+                android:orientation="vertical">
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_occupation"
@@ -90,11 +104,13 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="14dp"
-                android:orientation="vertical"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true">
+                android:layout_alignParentRight="true"
+                android:orientation="vertical"
+                android:layout_below="@+id/banner"
+                android:layout_marginLeft="14dp"
+                android:layout_marginRight="14dp">
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/worker_details_salary_period"
@@ -127,14 +143,14 @@
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:id="@+id/job_id"
-                android:textSize="12dp"
-                app:josefin_style="italic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:textColor="@android:color/holo_green_dark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="12dp"
+                app:josefin_style="italic" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -185,6 +201,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        android:background="@color/redSquareColor"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom"
+        android:background="@color/redSquareColor" />
 </android.support.v7.widget.CardView>
