--- a/app/src/main/res/layout/fragment_select_info_worker.xml
+++ b/app/src/main/res/layout/fragment_select_info_worker.xml
@@ -87,21 +87,13 @@
                 android:maxLines="1" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
             android:id="@+id/zip_layout"
+            style="@style/square_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:hintEnabled="false">
-
-            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
-                android:id="@+id/zip"
-                style="@style/square_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_worker_step_personal_information_post_code_hint"
-                android:inputType="textCapWords"
-                android:maxLines="1" />
-        </android.support.design.widget.TextInputLayout>
+            android:hint="@string/sign_up_worker_step_personal_information_post_code_hint" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_layout"
