--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -19,7 +19,7 @@
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:textColor="@color/redSquareColor"
-            android:text="Request a reference"
+            android:text="Request a Review"
             android:layout_gravity="end|right"
             android:layout_height="wrap_content"/>
     </android.support.v7.widget.Toolbar>
