--- a/app/src/main/res/layout/item_worker.xml
+++ b/app/src/main/res/layout/item_worker.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
             android:tint="@android:color/darker_gray"
-            android:background="@drawable/ic_no_avatar"
+            android:background="@drawable/bob"
             android:layout_width="90dp"
             android:layout_height="90dp"/>
 
