--- a/app/src/main/res/layout/fragment_worker_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_edit_profile.xml
@@ -41,7 +41,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/ic_no_avatar"
+                    android:background="@drawable/bob"
                     app:civ_border_color="#FF000000"
                     app:civ_border_width="2dp" />
 
