--- a/app/src/main/res/layout/fragment_worker_my_account.xml
+++ b/app/src/main/res/layout/fragment_worker_my_account.xml
@@ -39,7 +39,7 @@
                 app:civ_border_width="2dp"
                 app:civ_border_color="#FF000000"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:background="@drawable/ic_no_avatar"/>
+                android:background="@drawable/bob"/>
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:id="@+id/worker_my_account_name"
