--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -157,6 +157,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/workerBioLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14dp"
