--- a/app/src/main/res/layout/fragment_select_info_worker.xml
+++ b/app/src/main/res/layout/fragment_select_info_worker.xml
@@ -29,21 +29,6 @@
             android:gravity="center"
             android:text="@string/sign_up_worker_step_personal_information_title_2" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/avatarPlaceholder"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/upload_picture" />
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/avatar"
                 android:layout_width="120dp"
@@ -51,8 +36,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
-                android:visibility="gone" />
-        </RelativeLayout>
+                android:src="@drawable/bob" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/first_name_input"
