--- a/app/src/main/res/layout/activity_rate_worker.xml
+++ b/app/src/main/res/layout/activity_rate_worker.xml
@@ -52,8 +52,8 @@
                         android:layout_height="wrap_content"/>
 
                     <RadioGroup
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="24dp"
+                        android:gravity="center"
+                        android:layout_margin="8dp"
                         android:id="@+id/radio_group"
                         android:orientation="horizontal"
                         android:layout_width="wrap_content"
@@ -98,9 +98,9 @@
                         android:layout_height="wrap_content"/>
 
                     <RadioGroup
-                        android:layout_gravity="center_horizontal"
                         android:id="@+id/radio_group_got_hired"
-                        android:layout_marginTop="14dp"
+                        android:gravity="center"
+                        android:layout_margin="9dp"
                         android:orientation="horizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
