--- a/app/src/main/res/layout/dialog_create_job_details.xml
+++ b/app/src/main/res/layout/dialog_create_job_details.xml
@@ -1,67 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:background="@color/redSquareColor"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-            app:josefin_style="italic"
-            android:layout_margin="8dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:text="Cancel"
-            android:layout_alignParentLeft="true"
-            android:id="@+id/cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-            app:josefin_style="italic"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-            app:josefin_style="italic"
-            android:layout_margin="8dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:text="Done"
-            android:layout_alignParentRight="true"
-            android:id="@+id/done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-
-    <View
-        android:background="@android:color/darker_gray"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textColor="@color/blackSquareColor"
+        android:textSize="18sp"
+        app:josefin_style="bold" />
 
     <EditText
-        android:padding="6dp"
-        android:minLines="3"
-        android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
-        android:background="@android:color/transparent"
         android:id="@+id/job_details_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:gravity="top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:inputType="textCapSentences|textMultiLine"
+        android:minLines="3"
+        android:padding="6dp" />
 
-    <View
-        android:background="@android:color/darker_gray"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            android:id="@+id/cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_button_cancel"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/onboarding_cancel"
+            android:textAllCaps="true"
+            android:textColor="@color/redSquareColor"
+            android:textSize="18sp"
+            app:josefin_style="bold" />
+
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            android:id="@+id/done"
+            style="@style/BaseButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:text="@string/employer_rate_submit"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            app:josefin_style="bold" />
+    </LinearLayout>
 </LinearLayout>
